--- a/serverless.yml
+++ b/serverless.yml
@@ -14,7 +14,7 @@ plugins:
   - serverless-finch
 custom:
   client:
-    bucketName: ${self:service}-${self:provider.stage}-firstname-lastname
+    bucketName: ${self:service}-${self:provider.stage}
     distributionFolder: website
 
 functions:
