--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,7 @@ plugins:
 
 custom:
   client:
-    bucketName: ${self:service}-${self:provider.stage}-eloy-vega-castillo
+    bucketName: ${self:service}-${self:provider.stage}-esteban-decena
     distributionFolder: website
   alerts:
     dashboards: true
